Added bootstrap, customizations, and colors

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Elis's first page produced with Github</h1>
-<p>Hey buddy! How have you been?, Click here <%= link_to "here", "#"%>.</p>
+<div class="jumbotron">
+	<h1>Elis's first page produced with Github</h1>
+	Click here to become a Sisocrat (Sisu Socrat!) <%= link_to "Register", "#", class: "bbtn btn-primary btn-lg" %>
+</div>
+<div class="jumbotron">
+Sisocrats, please procede.	<%= render 'layouts/livedemo' %> 
+</div>
