--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -1,7 +1,19 @@
-$body-bg: #ecf0f1;
-$navbar-inverse-bg: #89C4F4;
-$navbar-inverse-link-color: white;
-$jumbotron-bg: #16a085;
-$brand-primary: #f39c12;
-@import 'bootstrap'; 
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
+$body-bg:                                                   #ecf0f1;
+$font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:                                        48px;
+$navbar-default-bg:                          #F2F1EF;
+$navbar-default-brand-color:      #9b59b6;
+$brand-primary:                                    #03A678;
+$jumbotron-bg:                                         white;
+
+@import 'bootstrap';
+
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
