--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
-<h1>About Us</hq>
-<div class="jumbotron">
-<p>Just a bunch of goons, being goonish and all</p>
+
+<div class="jumbotron center">
+<h1>About Us</h1>
+	<p>Just a bunch of goons, being goonish and all</p>
 </div>
