--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<div class="jumbotron">
-	<h1>Elis's first page produced with Github</h1>
-	Click here to become a Sisocrat (Sisu Socrat!) <%= link_to "Register", "#", class: "bbtn btn-primary btn-lg" %>
+<div class="jumbotron center">
+	<p>Become a Sisocrat (Sisu Socrat!) </p>
+	<%= link_to "Register", "#", class: "bbtn btn-primary btn-lg" %>
 </div>
-<div class="jumbotron">
-Sisocrats, please procede.	<%= render 'layouts/livedemo' %> 
+<div class="jumbotron center">
+<p>Sisocrats, please procede. </p>	<%= render 'layouts/livedemo' %> 
 </div>
