Devise and layouts for users

--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -6,6 +6,7 @@ $navbar-height:                                        48px;
 $navbar-default-bg:                          #F2F1EF;
 $navbar-default-brand-color:      #9b59b6;
 $brand-primary:                                    #03A678;
+$alert-info-bg:										#e74c3c;
 $jumbotron-bg:                                         white;
 
 @import 'bootstrap';
