--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,7 @@
       <li><%= link_to "Contact Us", contact_path %></li> 
       <li><%= link_to "About Sisu", sisu_path %></li> 
       <% if user_signed_in? %> 
+      <li><%= link_to "Account Settings", edit_user_registration_path %></li>
       <li><%= link_to "End Session", destroy_user_session_path, method: :delete %></li> 
       <% else %>
       <li><%= link_to "Enter Session", new_user_session_path %></li> 
