--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,7 @@
   <div class="panel-footer">
     <h3>Cancel my account</h3>
 
-    <p>Want to terminate membership? <%= button_to "~Fin", registration_path(resource_name), :data => { :confirm => "Once a sisu in mind, always a sisu in mind. However, beware you will need to create a new account. Are you sure you want to proceed?" }, :method => :delete, class: "btn btn-warning" %></p>
+    <p>Want to terminate membership? <%= button_to "~Fin", registration_path(resource_name), :data => { :confirm => "Once a sisu in mind, always a sisu in mind. However, beware you will need to create a new account if you decide to return to the flock in the future. Are you sure you want to proceed?" }, :method => :delete, class: "btn btn-warning" %></p>
 
     <%= link_to "Back", :back %>
   </div>
